Second attempt to fix focus issue on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -86,11 +86,6 @@ h1 {
   color: white;
 }
 
-.modal-highlight:focus {
-  border: none;
-}
-
-
 .App-link {
   color: #61dafb;
 }
